# py-orm

./: .gitignore  404.html  LICENSE  README.md  index.html  lol.py  mkdocs.yml  pyproject.toml
docs/: fast_start.md  index.md
docs/tutorial/: install.md  setting.md
docs/tutorial/model/: index.md
docs_/: index.md
docs_src/: main.py
docs_src/fast_start/: __init__.py  app.py  config.py  models.py  run.py
fast_start/: index.html
py_orm/: __init__.py  __main__.py  config.py  error.py  field.py  main.py  setting.py  sql_request.py
py_orm/dialect/: __init__.py  abstract.py  main.py  sqlite.py
py_orm/driver/: abstract.py  aiosqlite.py  async_.py  base.py  init.py  main.py  sync.py
py_orm/field/: __init__.py  field.py  index.py  main.py  table_field.py
py_orm/manager/: main.py
py_orm/migrations/: __init__.py  attribute.py  column.py  database.py  main.py  migrations_model.py
py_orm/models/: __init__.py  crud.py  db.py  main.py
py_orm/models/py_orm_model/: column.py  index.py  migrate.py  model.py  py_orm.py
py_orm/old_sql_builder/: __init__.py  main.py
py_orm/old_sql_builder/migrate/: __init__.py  attribute.py  column.py  database.py  migrations_model.py
py_orm/script/: info.py  main.py  migrate.py  migrations.py
py_orm/sql_builder/: __init__.py  column.py  create.py  operator.py  parameter.py  query.py  qwery.py  read.py  sql_builder.py  t.py  table.py  template.py  update.py  value.py
py_orm/sql_builder/field/: __init__.py  primary_key.py  unique.py
py_orm/sql_builder/migrate/: attribute.py  column.py  migrations_model.py
py_orm/sql_builder/queries/: __init__.py  main.py  query_builder.py  query_builder_model.py
search/: search_index.json
tests/: test_config.py  test_db.py  test_py_orm.py  test_script_migrate.py  test_sql_builder.py
tutorial/crud/: index.html
tutorial/driver/: index.html
tutorial/install/: index.html
tutorial/migrations/: index.html
tutorial/model/: index.html
tutorial/setting/: index.html
(+17 files in other folders)
