[tool.poetry]
name = "py_orm"
version = "0.1.0"
description = "ORM pydantic"
authors = ["Your Jaroslav jarlitvin@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"

pydantic = "^1.9"
typer = "^0.6"

# driver database
pymysql = {version = "^1.0", optional = true}
psycopg2 = {version = "^2.9", optional = true}
# driver database async
asyncpg = {version = "^0.26", optional = true}
aiomysql = {version = "^0.1", optional = true}
aiosqlite = {version = "^0.17", optional = true}

[tool.poetry.extras]
# driver database
pymysql = ["pymysql"]
psycopg2 = ["psycopg2"]
asyncpg = ["asyncpg"]
aiomysql = ["aiomysql"]
aiosqlite = ["aiosqlite"]

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
