[tool.poetry]
name = "py_orm"
version = "0.1.0"
description = "ORM pydantic"
authors = ["Your Jaroslav jarlitvin@gmail.com"]
readme = "README.md"
homepage = "https://jaroslav2001.github.io/py-orm"
documentation = "https://jaroslav2001.github.io/py-orm"

[tool.poetry.scripts]
py-orm = "py_orm.script.main:app"

[tool.poetry.dependencies]
python = "^3.10"

pydantic = "^1.9"
typer = "^0.6"
PyPika = "^0.48"
returns = "^0.19"

# driver database async
asyncpg = {version = "^0.26", optional = true}
aiomysql = {version = "^0.1", optional = true}
aiosqlite = {version = "^0.17", optional = true}

[tool.poetry.extras]
# driver database
asyncpg = ["asyncpg"]
aiomysql = ["aiomysql"]
aiosqlite = ["aiosqlite"]

all_drivers = [
    "asyncpg", "aiomysql", "aiosqlite"
]

[tool.poetry.dev-dependencies]
pytest = "^7.1"
mkdocs-material = "^8.3"

asyncpg = "^0.26"
aiomysql  = "^0.1"
aiosqlite  = "^0.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
